--- a/SportFields/app/src/main/AndroidManifest.xml
+++ b/SportFields/app/src/main/AndroidManifest.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +25,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SportFields"
         tools:targetApi="31">
+
+        <service
+            android:name=".services.LocationService"
+            android:foregroundServiceType="location"
+            android:exported="false"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
